--- a/css/whiteCollar/whiteCollar.css
+++ b/css/whiteCollar/whiteCollar.css
@@ -426,6 +426,7 @@ a:hover {
     margin-top: 15.63vw;
     padding: 0;
     gap: 6.4vw;
+    height: 39.97vw;
     flex-direction: row;
   }
   #aboutProject img {
@@ -625,6 +626,7 @@ a:hover {
   }
   #aboutProject {
     width: 100vw;
+    height: 122.40vw;
     margin-top: 18vw;
     padding: 0;
     gap: 6.4vw;
