--- a/css/mainPage/project.css
+++ b/css/mainPage/project.css
@@ -18,17 +18,16 @@
     animation: 2s show ease;
   }
 
-    @keyframes show {
-      0% {
-          transform: translateX(0);
-          opacity: 0;
-        }
-        100% {
-          transform: translateX(100px);
-          opacity:1;
-        }
-      }
-
+  @keyframes show {
+    0% {
+      transform: translateX(0);
+      opacity: 0;
+    }
+    100% {
+      transform: translateX(100px);
+      opacity: 1;
+    }
+  }
 
   .projectsCards {
     display: grid;
@@ -43,7 +42,7 @@
     margin-bottom: 0.83vw;
   }
   .projectsCards p {
-    color: var(--grey-C, #CFCFCF);
+    color: var(--grey-C, #cfcfcf);
     font-size: 0.83vw;
     font-weight: 400;
     line-height: 160%;
@@ -61,7 +60,7 @@
     grid-column: 1 / 3;
     grid-row: 1;
     height: 27.6vw;
-    
+
     overflow: hidden;
     display: flex;
     justify-content: space-between;
@@ -121,18 +120,18 @@
     height: 22.92vw;
     margin-top: 4.79vw;
 
-    content: '';
+    content: "";
     position: absolute;
     display: block;
     z-index: -1;
     border-radius: 2.08vw;
-    background: var(--grey-A, #1C1C1C);
+    background: var(--grey-A, #1c1c1c);
   }
 
   .projectsFragment2 {
     border-radius: 2.08vw;
     /* background: #111; */
-    background: var(--grey-A, #1C1C1C);
+    background: var(--grey-A, #1c1c1c);
     grid-column: 1 / 3;
     grid-row: 2;
     height: 27.6vw;
@@ -206,7 +205,7 @@
   .projectsFragment3 {
     border-radius: 2.08vw;
     /* background: rgb(18, 18, 18); */
-    background: var(--grey-A, #1C1C1C);
+    background: var(--grey-A, #1c1c1c);
     grid-column: 1 / 2;
     grid-row: 3 / 4;
     font-size: 0.83vw;
@@ -250,12 +249,12 @@
         rgba(0, 0, 0, 0.2) 100%
       ),
       linear-gradient(88deg, #d5b105 0%, #f1ad00 93.39%);
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    }
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  }
   .projectImage3 {
     z-index: 0;
     width: 13.65vw;
-    
+
     margin-top: 22.48vw;
     margin-left: 3.13vw;
 
@@ -277,7 +276,7 @@
   .projectsFragment4 {
     border-radius: 2.08vw;
     /* background: rgb(18, 18, 18); */
-    background: var(--grey-A, #1C1C1C);
+    background: var(--grey-A, #1c1c1c);
     font-size: 0.83vw;
     grid-column: 2 / 3;
     grid-row: 3 / 4;
@@ -290,17 +289,16 @@
     opacity: 0;
   }
 
-  
   .animationRight {
     transform: translateX(0%);
     opacity: 1;
   }
-  
+
   .animationLeft {
     transform: translateX(0%);
     opacity: 1;
   }
-  
+
   .projectsFragmentInfo4 {
     display: flex;
     position: absolute;
@@ -409,9 +407,9 @@
     overflow: hidden;
     display: flex;
     height: 46.35vw;
-    border-radius: 2.60vw;
+    border-radius: 2.6vw;
     justify-content: space-between;
-       transition: all 0.9s;
+    transition: all 0.9s;
     opacity: 0;
     transform: translateX(-30%);
   }
@@ -467,7 +465,7 @@
     padding: 8.33vw;
     margin-top: 4.79vw;
 
-    content: '';
+    content: "";
     position: absolute;
     display: block;
     z-index: -1;
@@ -478,12 +476,12 @@
   .projectsFragment2 {
     border-radius: 2.08vw;
     /* background: #111; */
-    background: var(--grey-A, #1C1C1C);
+    background: var(--grey-A, #1c1c1c);
     height: 46.35vw;
     overflow: hidden;
     display: flex;
     justify-content: space-between;
-           transition: all 0.9s;
+    transition: all 0.9s;
     opacity: 0;
     transform: translateX(30%);
   }
@@ -550,7 +548,7 @@
   .projectsFragment3 {
     border-radius: 2.08vw;
     /* background: rgb(18, 18, 18); */
-    background: var(--grey-A, #1C1C1C);
+    background: var(--grey-A, #1c1c1c);
     height: 46.35vw;
     overflow: hidden;
     transition: all 0.9s;
@@ -625,12 +623,12 @@
   .projectsFragment4 {
     border-radius: 2.08vw;
     /* background: rgb(18, 18, 18); */
-    background: var(--grey-A, #1C1C1C);
+    background: var(--grey-A, #1c1c1c);
     height: 46.35vw;
     overflow: hidden;
     display: flex;
     justify-content: space-between;
-           transition: all 0.9s;
+    transition: all 0.9s;
     opacity: 0;
     transform: translateX(30%);
   }
@@ -765,6 +763,69 @@
     display: flex;
     flex-direction: column;
   }
+
+  .projectsFragment11 {
+    padding: 0 0 5.33vw 0;
+    height: 135.47vw;
+    background: transparent;
+    display: flex;
+    flex-direction: column;
+    transition: all 0.9s;
+    transform: translateX(-30%);
+    opacity: 0;
+  }
+
+  .projectsFragment22 {
+    margin: 0;
+    padding: 5.33vw 0;
+    height: 133.33vw;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow: hidden;
+    gap: 10.67vw;
+
+    border-radius: 10.67vw;
+    background: transparent;
+    transition: all 0.9s;
+    transform: translateX(-30%);
+    opacity: 0;
+  }
+  .projectsFragment33 {
+    margin: 0;
+    padding: 5.33vw 0;
+    height: 133.33vw;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: normal;
+    overflow: hidden;
+
+    border-radius: 10.67vw;
+    background: transparent;
+    transition: all 0.9s;
+    transform: translateX(-30%);
+    opacity: 0;
+  }
+  .projectsFragment44 {
+    margin: 0;
+    padding: 5.33vw 0;
+    height: 133.33vw;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow: hidden;
+
+    border-radius: 10.67vw;
+    background: transparent;
+    transition: all 0.9s;
+    transform: translateX(-30%);
+    opacity: 0;
+  }
+
   .projectsFragment1 h4 {
     color: #50d13b;
   }
@@ -830,7 +891,6 @@
 
     border-radius: 10.67vw;
     background: transparent;
-    
   }
   .projectsFragmentInfo2 {
     padding: 0;
