--- a/css/mainPage/hero.css
+++ b/css/mainPage/hero.css
@@ -1,5 +1,4 @@
 @media only screen and (min-width: 1180px) {
-  
   a {
     transition: 0.7s;
     opacity: 100;
@@ -90,15 +89,15 @@
     font-style: normal;
     font-weight: 400;
   }
-  .heroContend h2, p{
+  .heroContend h2,
+  p {
     animation: 2s animationTextShow ease;
   }
   @keyframes animationTextShow {
     from {
       opacity: 0;
-
     }
-    to { 
+    to {
       opacity: 1;
     }
   }
@@ -119,7 +118,7 @@
     from {
       opacity: 0;
     }
-    to { 
+    to {
       opacity: 1;
     }
   }
@@ -137,6 +136,12 @@
     justify-content: center;
     align-items: center;
   }
+
+  .heroSectionTablet {
+    transition: all 0.9s;
+    opacity: 0;
+  }
+
   .hero::before {
     position: absolute;
     margin-top: 2vw;
