--- a/css/email.css
+++ b/css/email.css
@@ -145,6 +145,10 @@ input {
 }
 
 @media only screen and (max-width: 1179px) {
+  body {
+
+    overflow: auto;
+  }
   header {
     display: flex;
   }
@@ -183,8 +187,8 @@ input {
   }
   .buttonClose {
     position: absolute;
-    margin-left: 79.43vw;
-    margin-top: 29.95vw;
+    margin-left: 39.43vw;
+    margin-top: 0.95vw;
     display: block;
     width: 3.13vw;
     height: 3.13vw;
@@ -254,7 +258,7 @@ input {
   }
   .buttonClose {
     position: absolute;
-    margin-left: 70vw;
+    margin-left: 30vw;
     margin-top: 8.07vw;
     display: block;
     width: 6.4vw;
