--- a/css/index.css
+++ b/css/index.css
@@ -30,8 +30,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 25vw;
-  height: 4vw;
+  width: 28vw;
+  height: 5vw;
   border-radius: 10vw;
   background: linear-gradient(119deg, #bd00ff 21.38%, #3604c3 129.88%);
   margin-bottom: 2vw;
@@ -41,8 +41,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 25vw;
-  height: 4vw;
+  width: 28vw;
+  height: 5vw;
   border-radius: 10vw;
   background: linear-gradient(119deg, #bd00ff 21.38%, #3604c3 129.88%);
   transition: all 0.5s;
@@ -50,14 +50,14 @@ body {
 .english:hover {
   transform: translateY(-0.5vw);
   opacity: 0.6;
-  width: 25.5vw;
-  height: 4.5vw;
+  width: 28.5vw;
+  height: 5.5vw;
 }
 .deutsch:hover {
   transform: translateY(-0.5vw);
   opacity: 0.6;
-  width: 25.5vw;
-  height: 4.5vw;
+  width: 28.5vw;
+  height: 5.5vw;
 }
 
 .borderText {
@@ -628,23 +628,24 @@ main {
 @media only screen and (max-width: 1179px) {
 .english {
   width: 35vw;
-  height: 5vw;
+  height: 6vw;
+  /* font-size: 3vw; */
 }
 .deutsch {
   width: 35vw;
-  height: 5vw;
+  height: 6vw;
 }
 .english:hover {
   transform: translateY(-0.5vw);
   opacity: 0.6;
   width: 35.5vw;
-  height: 5.5vw;
+  height: 6.5vw;
 }
 .deutsch:hover {
   transform: translateY(-0.5vw);
   opacity: 0.6;
   width: 35.5vw;
-  height: 5.5vw;
+  height: 6.5vw;
 }
   main img {
     width: 100vw;
@@ -1176,19 +1177,15 @@ main {
 @media only screen and (max-width: 767px) {
   .english {
   width: 45vw;
-  height: 6vw;
+  height: 7vw;
+  font-size: 4vw;
+  margin-bottom: 3vw;
 }
 .deutsch {
   width: 45vw;
-  height: 6vw;
-}
-.english:hover {
-  width: 45.5vw;
-  height: 6.5vw;
-}
-.deutsch:hover {
-  width: 45.5vw;
-  height: 6.5vw;
+  height: 7vw;
+  font-size: 4vw;
+  margin-bottom: 3vw;
 }
   main img {
     /* display: none; */
@@ -1770,17 +1767,12 @@ main {
   .english {
   width: 65vw;
   height: 9vw;
+  font-size: 6vw;
+  margin-bottom: 4vw;
 }
 .deutsch {
   width: 65vw;
   height: 9vw;
-}
-.english:hover {
-  width: 65.5vw;
-  height: 9.5vw;
-}
-.deutsch:hover {
-  width: 65.5vw;
-  height: 9.5vw;
+  font-size: 6vw;
 }
 }
