--- a/css/mainPage/project.css
+++ b/css/mainPage/project.css
@@ -615,7 +615,7 @@
   .projectImage3X {
     display: flex;
     gap: 5.21vw;
-    margin-right: 0;
+    margin-right: -60px;
   }
   .projectImage3 {
     width: 34.38vw;
@@ -632,7 +632,7 @@
     margin: 0;
 
     border-radius: 1.04vw;
-    background-image: url(../../img/page-4.png);
+    /* background-image: url(../../img/page-4.png); */
     background-size: cover;
   }
 
@@ -733,6 +733,7 @@
     width: auto;
     font-size: 6.4vw;
     font-weight: 400;
+    margin-left: 10px;
   }
   .projectsCards h3 {
     color: #fff;
