--- a/css/mainPage/footer.css
+++ b/css/mainPage/footer.css
@@ -244,7 +244,7 @@
     grid-template-columns: repeat(4, 1fr);
     align-items: center;
     gap: 1vw;
-    width: 23vw;
+    width: auto;
     font-size: 0.83vw;
     list-style: none;
   }
