--- a/css/privacy.css
+++ b/css/privacy.css
@@ -97,7 +97,6 @@ a:hover {
 
 .privacyText li {
   display: flex;
-  align-items: center;
 }
 
 .privacyText li p {
@@ -110,41 +109,31 @@ a:hover {
   letter-spacing: -0.4px;
 }
 
-.boldSpan {
+.privacyText li p span {
+  background: linear-gradient(90deg, #BD00FF 40.17%, #3604C3 80.97%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   font-family: Montserrat;
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
-  line-height: 160%; 
-  letter-spacing: -0.4px;
-}
-
-.privacyText li p span {
-  color: var(--grey-C, #CFCFCF);
-  font-family: Montserrat;
-  font-size: 0.83vw;
-  font-style: normal;
-  font-weight: 500;
   line-height: 160%;
   letter-spacing: -0.4px;
-}
-
-.colorSpan{
-  background: linear-gradient(90deg, #bd00ff 40.17%, #3604c3 80.97%);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
   
-.underLine{
-  text-decoration-line: underline;
 }
 
 .lineBeforeLi {
-  width: 15px;
+  width: 12px;
   height: 1px;
+  margin-top: 12.5px;
   margin-right: 0.82vw;
   background: #cfcfcf;
+  position: absolute;
+}
+
+.before_text {
+  margin-left: 20px;
 }
 
 #aboutProject {
