--- a/css/privacy.css
+++ b/css/privacy.css
@@ -109,30 +109,30 @@ a:hover {
 }
 
 .privacyText li p span {
-  background: linear-gradient(90deg, #BD00FF 40.17%, #3604C3 80.97%);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  color: #9a00d0;
   font-family: Montserrat;
   font-size: 0.83vw;
   font-style: normal;
   font-weight: 500;
   line-height: 160%;
   letter-spacing: -0.4px;
-  
 }
 
 .lineBeforeLi {
   width: 12px;
   height: 1px;
-  margin-top: 36.5px;
+  margin-top: 1.88vw;
   margin-right: 0.82vw;
   background: #cfcfcf;
   position: absolute;
 }
 
+.lineUnder {
+  text-decoration-line: underline;
+}
+
 .before_text {
-  margin: 24px 0 0 20px;
+  margin: 1.25vw 0 0 1.34vw;
 }
 
 #aboutProject {
@@ -421,7 +421,7 @@ a:hover {
     font-weight: 700;
     font-size: 40px;
     width: auto;
-    margin-top:40px;
+    margin-top: 40px;
   }
   #organicShop h4 {
     /* width: 19.4vw; */
@@ -745,4 +745,3 @@ a:hover {
     padding: 0 4.267vw;
   }
 }
-
