--- a/css/mainPage/footer.css
+++ b/css/mainPage/footer.css
@@ -244,17 +244,19 @@
     grid-template-columns: repeat(4, 1fr);
     align-items: center;
     gap: 1vw;
-    width: 450px;
+    
+    width: 23.44vw;
+
     font-size: 0.83vw;
     list-style: none;
     transition: all 0.3s;
-  
   }
   footer .navigator li {
     text-align: center;
+    
   }
-  footer .navigator li a{
-   font-size: 0.87vw; 
+  footer .navigator li a {
+    font-size: 0.83vw;
   }
   footer .navigator li a:hover {
     font-weight: 700;
@@ -381,7 +383,6 @@
       transform: translate(0, 0);
     }
     100% {
-
       transform: translate(0, 1.95vw);
     }
   }
@@ -591,7 +592,7 @@
     color: #cfcfcf;
     text-align: center;
     font-family: Montserrat;
-    line-height: 140%; 
+    line-height: 140%;
     font-size: 4.27vw;
     font-style: normal;
     font-weight: 400;
